@@ -133,18 +133,16 @@ $query = "SELECT p.permission_id, p.permission_text, up.group_id FROM ".
 
 $result = $db->Execute($query);
 
-\CMSMS\HookManager::add_hook('listpermissions',function($perm_struct){
-        foreach( $perm_struct as &$one ) {
-            $key = 'perm_'.$one->name;
-            if( \CmsLangOperations::lang_key_exists('admin',$key) ) $one->label = \CmsLangOperations::lang_from_realm('admin',$key);
-            $key = 'permdesc_'.$one->name;
-            if( \CmsLangOperations::lang_key_exists('admin',$key) ) $one->description = \CmsLangOperations::lang_from_realm('admin',$key);
-        }
-        usort($perm_struct,function($a,$b) {
-                return strcmp($a->label,$b->label) ;
-            });
-        return $perm_struct;
+// use hooks to localize permissions.
+\CMSMS\HookManager::add_hook('localizeperm',function($perm_name){
+        $key = 'perm_'.$perm_name;
+        if( \CmsLangOperations::lang_key_exists('admin',$key) ) return \CmsLangOperations::lang_from_realm('admin',$key);
+        return $perm_name;
+    },\CMSMS\HookManager::PRIORITY_HIGH);
 
+\CMSMS\HookManager::add_hook('getperminfo',function($perm_name){
+        $key = 'permdesc_'.$perm_name;
+        if( \CmsLangOperations::lang_key_exists('admin',$key) ) return \CmsLangOperations::lang_from_realm('admin',$key);
     },\CMSMS\HookManager::PRIORITY_HIGH);
 
 $perm_struct = array();
@@ -159,10 +157,11 @@ while($result && $row = $result->FetchRow()) {
     if (!empty($row['group_id'])) $thisPerm->group[$row['group_id']] = 1;
     $thisPerm->id = $row['permission_id'];
     $thisPerm->name = $thisPerm->label = $row['permission_text'];
+    $thisPerm->label = \CMSMS\HookManager::do_hook('localizeperm',$thisPerm->name);
+    $thisPerm->description = \CMSMS\HookManager::do_hook('getperminfo',$thisPerm->name);
     $perm_struct[$row['permission_id']] = $thisPerm;
   }
 }
-$perm_struct = \CMSMS\HookManager::do_hook('listpermissions', $perm_struct );
 
 $smarty->assign('perms',$perm_struct);
 $smarty->assign('cms_secure_param_name',CMS_SECURE_PARAM_NAME);
